--- a/quiz_round_app/templates/dashboard.html
+++ b/quiz_round_app/templates/dashboard.html
@@ -21,15 +21,15 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <div class="col-lg-3"><i class="fa fa-book fa-5x"></i></div>
-                <div class="col-lg-9"><h1 class="page-header">Quiz Game</h1></div>
+                <div class="col-lg-1"><i class="fa fa-mortar-board fa-5x"></i></div>
+                <div class="col-lg-11"><h1 class="page-header">Quiz Game</h1></div>
             </div>
         </div>
         <div class="row">
             <div class="panel-body">
                 <div class="row">
                     <div class="table-responsive">
-                        <table class="table table-bordered table-hover table-striped">
+                        <table class="table table-bordered table-hover table-striped table-active">
                             <thead>
                                 <tr>
                                     <th>#</th>
