modified dashboard UI

--- a/quiz_round_app/templates/dashboard.html
+++ b/quiz_round_app/templates/dashboard.html
@@ -10,9 +10,9 @@
     <title>Quiz Python Test</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="{% static 'quiz/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'quiz/css/sb-admin-2.min.css' %}" rel="stylesheet">
-    <link href="{% static 'quiz/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'quiz_round_app/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'quiz_round_app/css/sb-admin-2.min.css' %}" rel="stylesheet">
+    <link href="{% static 'quiz_round_app/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
 
 </head>
 
